--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29,10 +29,15 @@ body {
 ol, ul {
 	list-style: none;
 }
-a {
+a:link {
 	text-decoration: none;
 }
-
+a:visited {
+	text-decoration: none;
+}
+a:active {
+	text-decoration: none;
+}
 blockquote, q {
 	quotes: none;
 }
